--- a/CadastroLivros/app/src/main/res/layout/activity_livro.xml
+++ b/CadastroLivros/app/src/main/res/layout/activity_livro.xml
@@ -20,8 +20,8 @@
     <View
         android:id="@+id/view"
         style="@style/ContainerComponents"
-        android:layout_width="378dp"
-        android:layout_height="130dp"
+        android:layout_width="383dp"
+        android:layout_height="164dp"
         android:layout_marginTop="44dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
@@ -31,16 +31,16 @@
 
     <TextView
         android:id="@+id/txt_titulo"
-        android:layout_width="350dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="349dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="20dp"
         android:ems="10"
         android:fontFamily="monospace"
         android:text="Título: "
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -56,8 +56,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.923" />
+        app:layout_constraintTop_toTopOf="@+id/view" />
 
     <TextView
         android:id="@+id/textView3"
